--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -42,7 +42,9 @@
         android:layout_below="@+id/realTop"
         android:layout_alignParentStart="true">
 
+        <!--Name-->
         <LinearLayout
+            android:padding="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -51,7 +53,7 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@mipmap/ic_name" />
+                android:src="@drawable/nameicon" />
 
             <EditText
 
@@ -64,8 +66,9 @@
                 android:textColorHint="@color/colorPrimary" />
 
         </LinearLayout>
-
+<!--Surname-->
         <LinearLayout
+            android:padding="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -73,7 +76,7 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@mipmap/ic_name" />
+                android:src="@drawable/nameicon" />
 
             <EditText
 
@@ -86,16 +89,18 @@
                 android:textColorHint="@color/colorPrimary" />
 
         </LinearLayout>
-
+<!--Username-->
         <LinearLayout
+            android:padding="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <ImageView
+                android:id="@+id/imageView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@mipmap/ic_name" />
+                android:src="@drawable/name" />
 
             <EditText
 
@@ -109,8 +114,10 @@
 
         </LinearLayout>
 
+<!--Password-->
 
         <LinearLayout
+            android:padding="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -118,7 +125,7 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@mipmap/ic_name" />
+                android:src="@drawable/password" />
 
             <EditText
 
@@ -131,6 +138,8 @@
                 android:textColorHint="@color/colorPrimary" />
 
         </LinearLayout>
+
+<!--Build-->
 
         <TextView
             android:layout_width="wrap_content"
@@ -167,8 +176,12 @@
 
 
         </Spinner>
+
+
     </LinearLayout>
 
+
+    <!--Button-->
     <Button
 
         android:id="@+id/btnRegister"
@@ -176,7 +189,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:background="@color/colorSecondary"
-        android:text="@string/register"
+        android:text="ยืนยัน"
         android:textColor="@color/textcolorPrimary"
         android:textSize="@dimen/size20"
         android:textStyle="bold" />
