--- a/app/src/main/res/layout/activity_check_order.xml
+++ b/app/src/main/res/layout/activity_check_order.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
+
     tools:context="kasembhundit.kutthareeya.thiti.manageres.CheckOrderActivity">
 
     <!--Toolbar-->
@@ -14,22 +18,30 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+
+        <!--Header-->
         <RelativeLayout
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <!--Add Order-->
             <ImageView
                 android:id="@+id/imvAddOrder"
-                android:src="@mipmap/ic_app"
+                android:src="@drawable/addcart"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentStart="true"
+                android:layout_marginStart="12dp" />
 
             <!--Title-->
             <TextView
+
+                android:textStyle="bold"
                 android:layout_centerInParent="true"
-                android:textSize="@dimen/h2"
-                android:text="Title"
+                android:textSize="@dimen/txtH1"
+                android:text="ใบสั่งซื้อ"
                 android:textColor="@color/textcolorPrimary"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
@@ -39,7 +51,7 @@
             <ImageView
                 android:id="@+id/imvOrder"
                 android:layout_alignParentRight="true"
-                android:src="@mipmap/ic_app"
+android:src="@drawable/confirm"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
@@ -47,6 +59,30 @@
 
     </android.support.v7.widget.Toolbar>
 
+    <!--Information-->
+    <RelativeLayout
+
+
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorLight"
+        android:padding="10dp">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@mipmap/ic_online"/>
+
+        <TextView
+            android:layout_marginLeft="@dimen/margin30"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/username"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="@dimen/txt20"
+            android:textStyle="bold"/>
+
+    </RelativeLayout>
 
     <!--ListView Order-->
     <ListView
@@ -69,11 +105,11 @@
             android:layout_alignParentRight="true"
             android:textColor="@color/textcolorPrimary"
             android:textStyle="bold"
-            android:textSize="@dimen/h2"
+            android:textSize="@dimen/txtH2"
             android:text="Total = 123 THB"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
     </RelativeLayout>
 
-</RelativeLayout>
+</LinearLayout>
