--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -64,7 +64,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
-                android:src="@drawable/logout" />
+                android:src="@drawable/confirm" />
         </RelativeLayout>
 
     </android.support.v7.widget.Toolbar>
