--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,17 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!--padding-->
     <dimen name="padHeader">20dp</dimen>
     <dimen name="padding20">20dp</dimen>
     <dimen name="padding10">10dp</dimen>
-
-    <dimen name="txtH1">30sp</dimen>
-    <dimen name="txt20">20sp</dimen>
-    <dimen name="txtH2">25dp</dimen>
-
-    <dimen name="dp25">25dp</dimen>
-    <dimen name="h1">30sp</dimen>
-    <dimen name="h2">20sp</dimen>
-
 
     <dimen name="margin30">30dp</dimen>
     <dimen name="dp10">10dp</dimen>
@@ -28,4 +20,17 @@
     <dimen name="dp300">300dp</dimen>
     <dimen name="dp70">70dp</dimen>
     <dimen name="dp60">60dp</dimen>
+
+<!--SizeFont-->
+    <dimen name="txtH1">30sp</dimen>
+    <dimen name="txt20">20sp</dimen>
+    <dimen name="txtH2">25dp</dimen>
+
+    <dimen name="dp25">25dp</dimen>
+    <dimen name="h1">30sp</dimen>
+    <dimen name="h2">20sp</dimen>
+
+<!--FontStyle-->
+    s
+
 </resources>
